feat: change preprocessing

--- a/notebook/preprocessing.ipynb
+++ b/notebook/preprocessing.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "94e8d8b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
+    "import string\n",
     "import emoji\n",
     "import nltk\n",
     "import pandas as pd\n",
@@ -261,7 +262,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/06/m9zqwbpx0xv34f89bzg3s27c0000gn/T/ipykernel_54353/4115779967.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/06/m9zqwbpx0xv34f89bzg3s27c0000gn/T/ipykernel_49313/4115779967.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df[\"Sentiment\"] = df[\"Sentiment\"].replace({\"negative\": 0, \"positive\": 1})\n"
      ]
     },
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "56b2f7d4",
    "metadata": {},
    "outputs": [],
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "78afc4e6",
    "metadata": {},
    "outputs": [],
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "3bb6ed1c",
    "metadata": {},
    "outputs": [
@@ -367,14 +368,14 @@
        "      <td>맛있고 분위기도 좋아요! 야외에서도 식사 가능해서 날씨 좋으면 더 좋아요</td>\n",
        "      <td>1</td>\n",
        "      <td>ko</td>\n",
-       "      <td>맛있 분위기 좋 어요 야외 에서 식사 가능 어서 날씨 좋 으면 더 좋 어요</td>\n",
+       "      <td>맛있 분위기 좋 어요 ! 야외 에서 식사 가능 어서 날씨 좋 으면 더 좋 어요</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>189273</th>\n",
        "      <td>어느 수산시장에서나 나오면 먹을 수 있는 민어.의 맛집  서비스 업종 역사상 최악 ...</td>\n",
        "      <td>0</td>\n",
        "      <td>ko</td>\n",
-       "      <td>어느 수산 시장 에서 나 나오 면 먹 수 있 민어 맛집 서비스 업종 역사 상 최악 ...</td>\n",
+       "      <td>어느 수산 시장 에서 나 나오 면 먹 수 있 민어 . 맛집 서비스 업종 역사 상 최...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2925</th>\n",
@@ -395,7 +396,7 @@
        "      <td>양도 푸짐하고 소스 모자라면 리필도 가능해서 좋아요. 한 명이 먹기에는 좀 많은 양...</td>\n",
        "      <td>1</td>\n",
        "      <td>ko</td>\n",
-       "      <td>양 푸짐 소스 모자라 면 리필 가능 어서 좋 어요 명 먹 기 좀 많 양 나 먹 보 ...</td>\n",
+       "      <td>양 푸짐 소스 모자라 면 리필 가능 어서 좋 어요 . 명 먹 기 좀 많 양 나 먹 ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -410,14 +411,14 @@
        "104357  양도 푸짐하고 소스 모자라면 리필도 가능해서 좋아요. 한 명이 먹기에는 좀 많은 양...          1       ko   \n",
        "\n",
        "                                            clean_comment  \n",
-       "133506          맛있 분위기 좋 어요 야외 에서 식사 가능 어서 날씨 좋 으면 더 좋 어요  \n",
-       "189273  어느 수산 시장 에서 나 나오 면 먹 수 있 민어 맛집 서비스 업종 역사 상 최악 ...  \n",
+       "133506        맛있 분위기 좋 어요 ! 야외 에서 식사 가능 어서 날씨 좋 으면 더 좋 어요  \n",
+       "189273  어느 수산 시장 에서 나 나오 면 먹 수 있 민어 . 맛집 서비스 업종 역사 상 최...  \n",
        "2925                      wow wow funki littl fleet sassi  \n",
        "41958   invent origin purpos british thing ever saw today  \n",
-       "104357  양 푸짐 소스 모자라 면 리필 가능 어서 좋 어요 명 먹 기 좀 많 양 나 먹 보 ...  "
+       "104357  양 푸짐 소스 모자라 면 리필 가능 어서 좋 어요 . 명 먹 기 좀 많 양 나 먹 ...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "9398aac7",
    "metadata": {},
    "outputs": [
@@ -461,13 +462,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>133506</th>\n",
-       "      <td>맛있 분위기 좋 어요 야외 에서 식사 가능 어서 날씨 좋 으면 더 좋 어요</td>\n",
+       "      <td>맛있 분위기 좋 어요 ! 야외 에서 식사 가능 어서 날씨 좋 으면 더 좋 어요</td>\n",
        "      <td>1</td>\n",
        "      <td>ko</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>189273</th>\n",
-       "      <td>어느 수산 시장 에서 나 나오 면 먹 수 있 민어 맛집 서비스 업종 역사 상 최악 ...</td>\n",
+       "      <td>어느 수산 시장 에서 나 나오 면 먹 수 있 민어 . 맛집 서비스 업종 역사 상 최...</td>\n",
        "      <td>0</td>\n",
        "      <td>ko</td>\n",
        "    </tr>\n",
@@ -485,7 +486,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>104357</th>\n",
-       "      <td>양 푸짐 소스 모자라 면 리필 가능 어서 좋 어요 명 먹 기 좀 많 양 나 먹 보 ...</td>\n",
+       "      <td>양 푸짐 소스 모자라 면 리필 가능 어서 좋 어요 . 명 먹 기 좀 많 양 나 먹 ...</td>\n",
        "      <td>1</td>\n",
        "      <td>ko</td>\n",
        "    </tr>\n",
@@ -495,14 +496,14 @@
       ],
       "text/plain": [
        "                                                  Comment  Sentiment Language\n",
-       "133506          맛있 분위기 좋 어요 야외 에서 식사 가능 어서 날씨 좋 으면 더 좋 어요          1       ko\n",
-       "189273  어느 수산 시장 에서 나 나오 면 먹 수 있 민어 맛집 서비스 업종 역사 상 최악 ...          0       ko\n",
+       "133506        맛있 분위기 좋 어요 ! 야외 에서 식사 가능 어서 날씨 좋 으면 더 좋 어요          1       ko\n",
+       "189273  어느 수산 시장 에서 나 나오 면 먹 수 있 민어 . 맛집 서비스 업종 역사 상 최...          0       ko\n",
        "2925                      wow wow funki littl fleet sassi          1       en\n",
        "41958   invent origin purpos british thing ever saw today          1       en\n",
-       "104357  양 푸짐 소스 모자라 면 리필 가능 어서 좋 어요 명 먹 기 좀 많 양 나 먹 보 ...          1       ko"
+       "104357  양 푸짐 소스 모자라 면 리필 가능 어서 좋 어요 . 명 먹 기 좀 많 양 나 먹 ...          1       ko"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "e9f28cf9",
    "metadata": {},
    "outputs": [],
@@ -535,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3b525f1d",
    "metadata": {},
    "outputs": [],
@@ -558,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "b82c32eb",
    "metadata": {},
    "outputs": [],
