feat: train per language for hybrid model

--- a/notebook/training/bert_embedding.ipynb
+++ b/notebook/training/bert_embedding.ipynb
@@ -10,12 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "id": "fb039b15",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
     "import torch\n",
     "torch.cuda.empty_cache()\n",
     "\n",
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "a61c36d5",
    "metadata": {},
    "outputs": [],
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "8a13a725",
    "metadata": {},
    "outputs": [],
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "466a8b78",
    "metadata": {},
    "outputs": [
@@ -169,7 +171,7 @@
        "108275  솔직히 별 하나도 아깝네요. 팥빙수라고 시켰는데 우유도 아니고 연유로 범벅을 해 가...  negative       ko"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "d0fac43f",
    "metadata": {},
    "outputs": [
@@ -195,7 +197,7 @@
        "(200000, 3)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "d2579e67",
    "metadata": {},
    "outputs": [
@@ -214,7 +216,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/06/m9zqwbpx0xv34f89bzg3s27c0000gn/T/ipykernel_81509/404474249.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/06/m9zqwbpx0xv34f89bzg3s27c0000gn/T/ipykernel_2839/404474249.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df[\"Sentiment\"] = df[\"Sentiment\"].replace({\"negative\": 0, \"positive\": 1})\n"
      ]
     },
@@ -227,7 +229,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "ce0b7c9d",
    "metadata": {},
    "outputs": [],
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "8e4ac92e",
    "metadata": {},
    "outputs": [],
@@ -263,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "1d950cde",
    "metadata": {},
    "outputs": [],
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "7aa2498f",
    "metadata": {},
    "outputs": [],
@@ -333,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "49b4776e",
    "metadata": {},
    "outputs": [],
@@ -414,13 +416,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "2bf4b1b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "np.save(\"../../model/train_embeddings.npy\", train_embeddings)\n",
     "np.save(\"../../model/test_embeddings.npy\", test_embeddings)"
    ]
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "87fbc512",
    "metadata": {},
    "outputs": [],
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "248e4720",
    "metadata": {},
    "outputs": [],
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "d11aec2a",
    "metadata": {},
    "outputs": [],
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "78227fd0",
    "metadata": {},
    "outputs": [],
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "d01a67dd",
    "metadata": {},
    "outputs": [],
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "id": "1b013857",
    "metadata": {},
    "outputs": [
@@ -1516,8 +1516,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting embeddings: 100%|██████████| 5000/5000 [04:07<00:00, 20.16it/s]\n",
-      "Extracting embeddings: 100%|██████████| 1250/1250 [01:19<00:00, 15.82it/s]\n"
+      "Extracting embeddings: 100%|██████████| 5000/5000 [04:32<00:00, 18.37it/s]\n",
+      "Extracting embeddings: 100%|██████████| 1250/1250 [01:34<00:00, 13.28it/s]\n"
      ]
     }
    ],
@@ -1528,6 +1528,17 @@
     "test_embeddings = get_embeddings(\n",
     "    test_input_ids, test_attention_masks, model, batch_size=16, device=device\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "cba40432",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"../../model/en_train_embeddings.npy\", train_embeddings)\n",
+    "np.save(\"../../model/en_test_embeddings.npy\", test_embeddings)"
    ]
   },
   {
@@ -2543,7 +2554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "id": "39f1408d",
    "metadata": {},
    "outputs": [],
@@ -2553,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "id": "36488c80",
    "metadata": {},
    "outputs": [],
@@ -2564,7 +2575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "id": "11397ad7",
    "metadata": {},
    "outputs": [],
@@ -2576,7 +2587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "id": "82161478",
    "metadata": {},
    "outputs": [],
@@ -2587,7 +2598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "id": "0655a92d",
    "metadata": {},
    "outputs": [],
@@ -2600,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "id": "53e0964d",
    "metadata": {},
    "outputs": [
@@ -2608,8 +2619,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting embeddings: 100%|██████████| 5000/5000 [18:06<00:00,  4.60it/s]    \n",
-      "Extracting embeddings: 100%|██████████| 1250/1250 [01:34<00:00, 13.23it/s]\n"
+      "Extracting embeddings: 100%|██████████| 5000/5000 [04:56<00:00, 16.84it/s]\n",
+      "Extracting embeddings: 100%|██████████| 1250/1250 [01:31<00:00, 13.72it/s]\n"
      ]
     }
    ],
@@ -2620,6 +2631,17 @@
     "test_embeddings = get_embeddings(\n",
     "    test_input_ids, test_attention_masks, model, batch_size=16, device=device\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "0c996daf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"../../model/ko_train_embeddings.npy\", train_embeddings)\n",
+    "np.save(\"../../model/ko_test_embeddings.npy\", test_embeddings)"
    ]
   },
   {
