--- a/notebook/training/fasttext_aligned.ipynb
+++ b/notebook/training/fasttext_aligned.ipynb
@@ -41,7 +41,82 @@
    "execution_count": null,
    "id": "01993559",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Comment</th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>Language</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>['맛있', '분위기', '좋', '어요', '야외', '에서', '식사', '가능...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ko</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>['어느', '수산', '시장', '에서', '나', '나오', '면', '먹', ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ko</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>['wow', 'wow', 'funky', 'little', 'fleet', 'sa...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>en</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>['invention', 'original', 'purpose', 'british'...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>en</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>['양', '푸짐', '소스', '모자라', '면', '리필', '가능', '어서'...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ko</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Comment  Sentiment Language\n",
+       "0  ['맛있', '분위기', '좋', '어요', '야외', '에서', '식사', '가능...          1       ko\n",
+       "1  ['어느', '수산', '시장', '에서', '나', '나오', '면', '먹', ...          0       ko\n",
+       "2  ['wow', 'wow', 'funky', 'little', 'fleet', 'sa...          1       en\n",
+       "3  ['invention', 'original', 'purpose', 'british'...          1       en\n",
+       "4  ['양', '푸짐', '소스', '모자라', '면', '리필', '가능', '어서'...          1       ko"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv('../../data/embedding_preprocessed_data.csv')\n",
     "df.head()"
