chore: clean unused code

--- a/notebook/english_data.ipynb
+++ b/notebook/english_data.ipynb
@@ -16,10 +16,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from wordcloud import WordCloud\n",
     "\n",
     "sns.set_style(\"whitegrid\")\n",
     "sns.set_palette(\"pastel\")"
@@ -293,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "00e1062b",
    "metadata": {},
    "outputs": [
@@ -327,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c2dc22c7",
    "metadata": {},
    "outputs": [
@@ -355,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d84eabc2",
    "metadata": {},
    "outputs": [
@@ -395,12 +392,13 @@
        "Index: []"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## Empty comments so will be dropping\n",
     "df = df[df[\"Comment\"].notna() & (df[\"Comment\"] != \"\")]\n",
     "df[df[\"Comment\"].isnull() | (df[\"Comment\"] == \"\")]"
    ]
@@ -415,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1e0b012c",
    "metadata": {},
    "outputs": [
@@ -433,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "1e4cde00",
    "metadata": {},
    "outputs": [
@@ -452,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d7f5c598",
    "metadata": {},
    "outputs": [
@@ -748,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "08983fd6",
    "metadata": {},
    "outputs": [
@@ -768,6 +766,7 @@
     }
    ],
    "source": [
+    "## a bit imbalanced data, but will not be using all so the subset will be balanced\n",
     "df.value_counts(\"Sentiment\")"
    ]
   },
@@ -911,6 +910,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b8e70662",
+   "metadata": {},
+   "source": [
+    "### Save cleaned data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "20d28de4",
@@ -919,14 +926,6 @@
    "source": [
     "df.to_csv(\"../data/english_only_data.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b285f4b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
