feat: add video details

--- a/notebook/downloader/downloader.ipynb
+++ b/notebook/downloader/downloader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "35079629",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 81,
    "id": "cfd536ac",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 82,
    "id": "e0bd4921",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 83,
    "id": "a0bbc019",
    "metadata": {},
    "outputs": [
@@ -196,6 +196,49 @@
    ],
    "source": [
     "pprint.pp(response[\"items\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "44e7033e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = youtube.videos().list(part=\"snippet,statistics\", id=video_id).execute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7d9e6cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: IU '미인 (Feat. Balming Tiger)' MV\n",
+      "Thumbnail: https://i.ytimg.com/vi/l5Z1PBJLUss/hqdefault.jpg\n",
+      "Views: 1986293\n",
+      "Likes: 106625\n",
+      "Likes: 4909\n"
+     ]
+    }
+   ],
+   "source": [
+    "item = response[\"items\"][0]\n",
+    "title = item[\"snippet\"][\"title\"]\n",
+    "thumbnail_url = item[\"snippet\"][\"thumbnails\"][\"high\"][\"url\"]\n",
+    "view_count = item[\"statistics\"][\"viewCount\"]\n",
+    "like_count = item[\"statistics\"][\"likeCount\"]\n",
+    "comment_count = item[\"statistics\"][\"commentCount\"]\n",
+    "\n",
+    "print(f\"Title: {title}\")\n",
+    "print(f\"Thumbnail: {thumbnail_url}\")\n",
+    "print(f\"Views: {view_count}\")\n",
+    "print(f\"Likes: {like_count}\")\n",
+    "print(f\"Likes: {comment_count}\")"
    ]
   },
   {
